# alhakeem.ca

./: .gitignore  go.mod  hugo.yaml  index.html
.github/prayer_time_calculator/: prayer_times.py  pyproject.toml
assets/css/: custom.css
content/: _index.md  search.md
content/docs/: _index.md
content/posts/: test.md
data/: prayer_times.json
layouts/partials/: head.html  index_profile.html
layouts/shortcodes/: prayer_time_table.html
